--- a/home page/feedbackform.css
+++ b/home page/feedbackform.css
@@ -4,19 +4,22 @@
     margin-top: 0px;
     padding-top: 0px;
     text-align: center;
+    padding-bottom: 30px;
 }
 .navtop a:hover{
     background-color: lightblue;
 }
 
+#formContainer{
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+    margin: 5px;
+}
 #blueBorder{
     border: 2px solid lightblue;
-    width: 690px;
-    height: 500px;
     align-items: center;
     text-align: center;
-    margin-top: 100px;
-    margin-left: 100px;
 }
 #formHeader {
     text-align: center;
@@ -27,9 +30,16 @@
 #feedbackForm{
     text-align: left;
     padding: 20px;
+    margin-bottom: 10px;
 }
 button{
     background-color: green;
     width: 200px;
     padding: 10px;
+    margin-bottom: 20px;
+}
+input, textarea{
+    width: 97%;
+    padding: 10px;
+    margin-bottom: 10px;
 }
